Updated structure, added CSS content for Desktop.

--- a/Atsiskaitymas HTML CSS/index.html
+++ b/Atsiskaitymas HTML CSS/index.html
@@ -9,87 +9,159 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Oswald&family=Public+Sans:ital,wght@0,200;1,100;1,200&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans:wght@300&family=Oswald&family=Public+Sans:ital,wght@0,200;1,100;1,200&display=swap"
         rel="stylesheet">
     <title>NFT Startup Landing Page</title>
 </head>
 
 <body>
     <header>
-        <img src="logo.svg" alt="nftlanding logo">
-        <a href="">Features</a>
-        <a href="">About</a>
-        <a href="">Launch</a>
-        <a href="">Sign up</a>
-    </header>
-    <div class="container.launch">
-        <div>
-            <p>LAUNCHING SOON</p>
-            <h1>An NFT like no other</h1>
-            <p>Don't miss our on the release of our new NFT. Sign up below to receive updates when we go live.</p>
-            <button><a href="">Sign up </a></button>
+        <div><img src="logo.svg" alt="nftlanding logo"></div>
+        <div> <a class="header-links" href="">Features</a>
+            <a class="header-links" href="">About</a>
+            <a class="header-links" href="">Launch</a>
+            <a class="header-links" href="">Sign up</a>
         </div>
-        <div><img src="graphic.svg" alt=""></div>
+    </header>
+    <div class="firstcontainer">
+        <div class="first-container-items">
+            <p id="launching">LAUNCHING SOON</p>
+            <h2>An NFT like no other</h2>
+            <p class="description">Don't miss our on the release of our new NFT. Sign up below to receive updates when
+                we go live.</p>
+            <button class="sign-up"><a href="">Sign up </a></button>
+        </div>
+        <div class="first-container-items"><img src="graphic.svg" alt=""></div>
     </div>
-    <div>
-        <h2>Free NFT for early birds</h2>
-        <p>Sign up today and you'll get a free NFT when we launch.</p>
+    <div class="secondcontainer">
+        <h3>Free NFT for early birds</h3>
+        <p class="description">Sign up today and you'll get a free NFT when we launch.</p>
     </div>
     <div class="companies">
-        <img src="boomerang.svg" alt="Boomerang logo">
-        <img src="Blimp.svg" alt="Blimp logo">
-        <img src="qrco.svg" alt="qrco logo">
-        <img src="OpenDoor.svg" alt="Open Door logo">
-        <img src="Droplet.svg" alt="Droplet logo">
+        <div> <img src="boomerang.svg" alt="Boomerang logo"></div>
+        <div> <img src="Blimp.svg" alt="Blimp logo"></div>
+        <div> <img src="qrco.svg" alt="qrco logo"></div>
+        <div> <img src="OpenDoor.svg" alt="Open Door logo"></div>
+        <div> <img src="Droplet.svg" alt="Droplet logo"></div>
+
     </div>
     <div class="auction">
-        <h2>LE Super Rare Auction</h2>
-        <p>We have released four limited edition NFTs earlyt which can be bid on via <a href="">Opensea</a>.</p>
-        <div class="auction.items">
+        <h3>LE Super Rare Auction</h3>
+        <p class="description">We have released four limited edition NFTs early which can be bid on via <a
+                href="">Opensea</a>.</p>
+        <div class="auction-items">
             <div class="NFTs">
                 <img src="ntf-1.svg" alt="">
+                <div class="nft-description">
+                    <div class="nft-content">
+                        <p class="gloopseries">GLOOP SERIES</p>
+                        <h5>Purple Man</h5>
+                        <p class="auction-info">#12983</p>
+                    </div>
+                    <div class="nft-content">
+                        <p class="bid">TOP BID</p>
+                        <h5> <img src="eth.svg" alt=""> 2.99 ETH</h5>
+                        <p class="auction-info">1 day left</p>
+                    </div>
+                </div>
             </div>
             <div class="NFTs">
                 <img src="nft-2.svg" alt="">
+                <div class="nft-description">
+                    <div class="nft-content">
+                        <p class="gloopseries">GLOOP SERIES</p>
+                        <h5>Beige</h5>
+                        <p class="auction-info">#12983</p>
+                    </div>
+                    <div class="nft-content">
+                        <p class="bid">TOP BID</p>
+                        <h5> <img src="eth.svg" alt=""> 2.99 ETH</h5>
+                        <p class="auction-info">1 day left</p>
+                    </div>
+                </div>
             </div>
             <div class="NFTs">
                 <img src="ntf-3.svg" alt="">
+                <div class="nft-description">
+                    <div class="nft-content">
+                        <p class="gloopseries">GLOOP SERIES</p>
+                        <h5>Red Man</h5>
+                        <p class="auction-info">#12983</p>
+                    </div>
+                    <div class="nft-content">
+                        <p class="bid">TOP BID</p>
+                        <h5> <img src="eth.svg" alt=""> 2.99 ETH</h5>
+                        <p class="auction-info">1 day left</p>
+                    </div>
+                </div>
             </div>
             <div class="NFTs">
                 <img src="ntf-4.svg" alt="">
+                <div class="nft-description">
+                    <div class="nft-content">
+                        <p class="gloopseries">GLOOP SERIES</p>
+                        <h5>Green</h5>
+                        <p class="auction-info">#12983</p>
+                    </div>
+                    <div class="nft-content">
+                        <p class="bid">TOP BID</p>
+                        <h5> <img src="eth.svg" alt=""> 2.99 ETH</h5>
+                        <p class="auction-info">1 day left</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div>
-        <div>
-            <p>LAUNCHING SOON</p>
+    <hr>
+    <div class="third-container">
+        <div class="first-container-items">
+            <p id="launching">LAUNCHING SOON</p>
             <h2>An NFT like no other</h2>
-            <p>Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
-            <button><a href="">Sign up </a></button>
+            <p class="description">Don't miss our on the release of our new NFT. Sign up below to receive updates
+                when
+                we go live.</p>
+            <button class="sign-up"><a href="">Sign up </a></button>
         </div>
+        <div class="first-container-items"><img src="upsell-footer-image.svg" alt=""></div>
     </div>
-    <footer class="footer.info">
-        <img src="logo.svg" alt="NFT landing logo">
-        <p>Exclusive NFT collection</p>
-        <h3>ABOUT</h3>
-        <a href="">About</a>
-        <a href="">Terms</a>
-        <a href="">Legal</a>
-        <h3>NFT</h3>
-        <a href="">OpenSea</a>
-        <a href="">Maker</a>
-        <a href="">Learn</a>
-        <h3>CONTACT</h3>
-        <a href="">Press</a>
-        <a href="">Support</a>
-        <h3>SOCIAL</h3>
-        <a href="">Twitter</a>
-        <a href="">Instagram</a>
+    <hr>
+    <footer>
+        <div class="footer-info">
+            <div class="footer-info-logo">
+                <img src="logo.svg" alt="NFT landing logo">
+                <p>Exclusive NFT collection</p>
+            </div>
+            <div class="footer-links">
+                <div class="footer-info-item">
+                    <h4>ABOUT</h4>
+                    <a href="">About</a>
+                    <a href="">Terms</a>
+                    <a href="">Legal</a>
+                </div>
+                <div class="footer-info-item">
+                    <h4>NFT</h4>
+                    <a href="">OpenSea</a>
+                    <a href="">Maker</a>
+                    <a href="">Learn</a>
+                </div>
+                <div class="footer-info-item">
+                    <h4>CONTACT</h4>
+                    <a href="">Press</a>
+                    <a href="">Support</a>
+                </div>
+                <div class="footer-info-item">
+                    <h4>SOCIAL</h4>
+                    <a href="">Twitter</a>
+                    <a href="">Instagram</a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-end">
+            <div class="copyright">© Copyright 2022 NFTlanding</div>
+            <div class="launching">Launching August 2022</div>
+        </div>
     </footer>
-    <footer class="end">
-        <div>Copyright 2022 NFTlanding</div>
-        <div>Launching August 2022</div>
-    </footer>
+
 </body>
 
 </html>
