Mobile view added

--- a/Atsiskaitymas HTML CSS/index.html
+++ b/Atsiskaitymas HTML CSS/index.html
@@ -17,32 +17,33 @@
 <body>
     <header>
         <div><img src="logo.svg" alt="nftlanding logo"></div>
-        <div> <a class="header-links" href="">Features</a>
+        <div class="hambuger-menu">
+            <a class="header-links" href="">Features</a>
             <a class="header-links" href="">About</a>
             <a class="header-links" href="">Launch</a>
             <a class="header-links" href="">Sign up</a>
         </div>
     </header>
     <div class="firstcontainer">
-        <div class="first-container-items">
+        <div class="first-container-items first-container-text">
             <p id="launching">LAUNCHING SOON</p>
             <h2>An NFT like no other</h2>
             <p class="description">Don't miss our on the release of our new NFT. Sign up below to receive updates when
                 we go live.</p>
             <button class="sign-up"><a href="">Sign up </a></button>
         </div>
-        <div class="first-container-items"><img src="graphic.svg" alt=""></div>
+        <div class="first-container-image"><img class="pinkNFT" src="graphic.svg" alt=""></div>
     </div>
     <div class="secondcontainer">
         <h3>Free NFT for early birds</h3>
         <p class="description">Sign up today and you'll get a free NFT when we launch.</p>
     </div>
     <div class="companies">
-        <div> <img src="boomerang.svg" alt="Boomerang logo"></div>
-        <div> <img src="Blimp.svg" alt="Blimp logo"></div>
-        <div> <img src="qrco.svg" alt="qrco logo"></div>
-        <div> <img src="OpenDoor.svg" alt="Open Door logo"></div>
-        <div> <img src="Droplet.svg" alt="Droplet logo"></div>
+        <div class="company1"> <img src="boomerang.svg" alt="Boomerang logo"></div>
+        <div class="company2"> <img src="Blimp.svg" alt="Blimp logo"></div>
+        <div class="company3"> <img src="qrco.svg" alt="qrco logo"></div>
+        <div class="company4"> <img src="OpenDoor.svg" alt="Open Door logo"></div>
+        <div class="company5"> <img src="Droplet.svg" alt="Droplet logo"></div>
 
     </div>
     <div class="auction">
@@ -122,7 +123,7 @@
                 we go live.</p>
             <button class="sign-up"><a href="">Sign up </a></button>
         </div>
-        <div class="first-container-items"><img src="upsell-footer-image.svg" alt=""></div>
+        <div class="third-container-image"><img src="upsell-footer-image.svg" alt=""></div>
     </div>
     <hr>
     <footer>
@@ -133,23 +134,23 @@
             </div>
             <div class="footer-links">
                 <div class="footer-info-item">
-                    <h4>ABOUT</h4>
+                    <h4>ABOUT footerAbout</h4>
                     <a href="">About</a>
                     <a href="">Terms</a>
                     <a href="">Legal</a>
                 </div>
-                <div class="footer-info-item">
+                <div class="footer-info-item footerNFT">
                     <h4>NFT</h4>
                     <a href="">OpenSea</a>
                     <a href="">Maker</a>
                     <a href="">Learn</a>
                 </div>
-                <div class="footer-info-item">
+                <div class="footer-info-item contact">
                     <h4>CONTACT</h4>
                     <a href="">Press</a>
                     <a href="">Support</a>
                 </div>
-                <div class="footer-info-item">
+                <div class="footer-info-item social">
                     <h4>SOCIAL</h4>
                     <a href="">Twitter</a>
                     <a href="">Instagram</a>
