Missing icons added

--- a/Atsiskaitymas HTML CSS/index.html
+++ b/Atsiskaitymas HTML CSS/index.html
@@ -17,20 +17,23 @@
 <body>
     <header>
         <div><img src="logo.svg" alt="nftlanding logo"></div>
-        <div class="hambuger-menu">
+        <div>
             <a class="header-links" href="">Features</a>
             <a class="header-links" href="">About</a>
             <a class="header-links" href="">Launch</a>
             <a class="header-links" href="">Sign up</a>
         </div>
+        <div> <img class="hamburger-menu" src="hamburger-menu.svg" alt="hamburger menu icon"></div>
     </header>
+
+
     <div class="firstcontainer">
         <div class="first-container-items first-container-text">
             <p id="launching">LAUNCHING SOON</p>
             <h2>An NFT like no other</h2>
             <p class="description">Don't miss our on the release of our new NFT. Sign up below to receive updates when
                 we go live.</p>
-            <button class="sign-up"><a href="">Sign up </a></button>
+            <button class="sign-up"><a href="">Sign up</a></button>
         </div>
         <div class="first-container-image"><img class="pinkNFT" src="graphic.svg" alt=""></div>
     </div>
@@ -52,7 +55,7 @@
                 href="">Opensea</a>.</p>
         <div class="auction-items">
             <div class="NFTs">
-                <img src="ntf-1.svg" alt="">
+                <img src="ntf-1.svg" alt="Purple NFT logo">
                 <div class="nft-description">
                     <div class="nft-content">
                         <p class="gloopseries">GLOOP SERIES</p>
@@ -61,13 +64,13 @@
                     </div>
                     <div class="nft-content">
                         <p class="bid">TOP BID</p>
-                        <h5> <img src="eth.svg" alt=""> 2.99 ETH</h5>
+                        <h5> <img src="eth.svg" alt="Ethereum logo"> 2.99 ETH</h5>
                         <p class="auction-info">1 day left</p>
                     </div>
                 </div>
             </div>
             <div class="NFTs">
-                <img src="nft-2.svg" alt="">
+                <img src="nft-2.svg" alt="image.png">
                 <div class="nft-description">
                     <div class="nft-content">
                         <p class="gloopseries">GLOOP SERIES</p>
@@ -76,13 +79,13 @@
                     </div>
                     <div class="nft-content">
                         <p class="bid">TOP BID</p>
-                        <h5> <img src="eth.svg" alt=""> 2.99 ETH</h5>
+                        <h5> <img src="eth.svg" alt="Ethereum logo"> 2.99 ETH</h5>
                         <p class="auction-info">1 day left</p>
                     </div>
                 </div>
             </div>
             <div class="NFTs">
-                <img src="ntf-3.svg" alt="">
+                <img src="ntf-3.svg" alt="Red man NFT logo">
                 <div class="nft-description">
                     <div class="nft-content">
                         <p class="gloopseries">GLOOP SERIES</p>
@@ -91,13 +94,13 @@
                     </div>
                     <div class="nft-content">
                         <p class="bid">TOP BID</p>
-                        <h5> <img src="eth.svg" alt=""> 2.99 ETH</h5>
+                        <h5> <img src="eth.svg" alt="Ethereum logo"> 2.99 ETH</h5>
                         <p class="auction-info">1 day left</p>
                     </div>
                 </div>
             </div>
             <div class="NFTs">
-                <img src="ntf-4.svg" alt="">
+                <img src="ntf-4.svg" alt="Green NFT logo">
                 <div class="nft-description">
                     <div class="nft-content">
                         <p class="gloopseries">GLOOP SERIES</p>
@@ -106,7 +109,7 @@
                     </div>
                     <div class="nft-content">
                         <p class="bid">TOP BID</p>
-                        <h5> <img src="eth.svg" alt=""> 2.99 ETH</h5>
+                        <h5> <img src="eth.svg" alt="Ethereum logo"> 2.99 ETH</h5>
                         <p class="auction-info">1 day left</p>
                     </div>
                 </div>
@@ -123,7 +126,7 @@
                 we go live.</p>
             <button class="sign-up"><a href="">Sign up </a></button>
         </div>
-        <div class="third-container-image"><img src="upsell-footer-image.svg" alt=""></div>
+        <div class="third-container-image"><img src="upsell-footer-image.svg" alt="Green NFT logo full size"></div>
     </div>
     <hr>
     <footer>
@@ -131,10 +134,17 @@
             <div class="footer-info-logo">
                 <img src="logo.svg" alt="NFT landing logo">
                 <p>Exclusive NFT collection</p>
+                <div class="social-logos">
+                    <div><img class="facebook social-" src="facebook.svg" alt="Facebook icon"></div>
+                    <div><img class="twitter social-" src="twitter.svg" alt="Twitter icon"></div>
+                    <div><img class="instagram social-" src="instagram.svg" alt="Instagram icon"></div>
+                    <div><img class="tiktok social-" src="tiktok.svg" alt="TikTok icon"></div>
+                </div>
             </div>
+
             <div class="footer-links">
                 <div class="footer-info-item">
-                    <h4>ABOUT footerAbout</h4>
+                    <h4>ABOUT</h4>
                     <a href="">About</a>
                     <a href="">Terms</a>
                     <a href="">Legal</a>
