Task 1: comments in js file, html and css changes

--- a/JS atsiskaitymas/Task 1/Index.html
+++ b/JS atsiskaitymas/Task 1/Index.html
@@ -22,7 +22,11 @@
           <input type="submit" id="submit-btn" value="Calculate" />
         </form>
         <!-- Place for output after form submission -->
-        <div id="output"></div>
+        <div id="output">
+              <div>Svarai (lb):<span id="svarai"></span></div>
+              <div>Gramai (g):<span id="gramai"></span></div>
+              <div>Uncijos (oz):<span id="uncijos"></span></div>
+        </div>
       </div>
     </main>
 
