--- a/JS atsiskaitymas/Task 1/Index.html
+++ b/JS atsiskaitymas/Task 1/Index.html
@@ -18,7 +18,7 @@
         <h1 class="headline">Weight Converter</h1>
         <!-- Users input -->
         <form>
-          <input type="text" id="search" placeholder="Enter kilograms..." />
+          <input type="text" id="search" placeholder="Enter the weight in kilograms" />
           <input type="submit" id="submit-btn" value="Calculate" />
         </form>
         <!-- Place for output after form submission -->
